# MWEdit

./: .gitignore  CMakeLists.txt  FEATURES.md  README.md  features.md  meson.build
.github/workflows/: cmake.yml  msbuild.yml  windows.yml
Common/: conapp.cpp  conapp.h  dl_base.cpp  dl_base.h  dl_block.cpp  dl_block.h  dl_chr.cpp  dl_chr.h  dl_err.cpp  dl_err.h  dl_file.cpp  dl_file.h  dl_log.cpp  dl_log.h  dl_math.cpp  dl_math.h  dl_mem.cpp  dl_mem.h  dl_str.cpp  dl_str.h  dl_time.cpp  dl_time.h  tstfile.cpp
Common/Contain/: GenStack.cpp  GenStack.h  ObjArray.cpp  ObjArray.h  PtrArray.cpp  PtrArray.h  dl_map.cpp  dl_map.h  listfile.cpp  listfile.h  ptrarray.cpp  ptrarray.h  temarray.cpp  temarray.h
Common/File/: CfgFile.cpp  CfgFile.h  FileBuffer.cpp  FileBuffer.h  GenFile.cpp  GenFile.h  GenFind.cpp  GenFind.h  genfile.cpp  genfile.h  genfind.cpp  genfind.h
Common/Images/: rgbpal.cpp  rgbpal.h
Common/Memory/: Pointer.h
Common/String/: SSArray.cpp  SSArray.h  SString.cpp  SString.h  sstring.h
Common/Time/: tasktime.cpp  tasktime.h
Common/Utility/: namelist.cpp  namelist.h  profile.cpp  profile.h
File/: CsvFile.cpp  CsvFile.h  bmpfile.cpp  bmpfile.h  chunk3ds.h  csvfile.cpp  csvfile.h  dxffile.cpp  dxffile.h  file3ds.cpp  file3ds.h  pcx.cpp  pcx.h
File/XML/: XMLFile.cpp  XMLFile.h  XmlAttr.cpp  XmlAttr.h  XmlElem.cpp  XmlElem.h
IL/: devil_internal_exports.h  il.h  il_wrap.h  ilu.h  ilut.h
Windows/: ColorStatic.cpp  ColorStatic.h  TabCtrlSheet.cpp  TabCtrlSheet.h  WinUtil.cpp  WinUtil.h  dl_ToolTip.cpp  dl_ToolTip.h  winutil.h
docs/: Bugs.txt  ChangeLog.txt  Features.txt  ReadMe.txt  Stats.txt  ToDo.txt  UsingHelp.htm  csv_help.htm
esm/: ESMSubBase.h  EsmActivator.cpp  EsmActivator.h  EsmAlchemy.cpp  EsmAlchemy.h  EsmApparatus.cpp  EsmApparatus.h  EsmArmor.cpp  EsmArmor.h  EsmBase.cpp  EsmBirthSign.cpp  EsmBirthSign.h  EsmBodyPart.cpp  EsmBodyPart.h  EsmBook.cpp  EsmBook.h  EsmCell.cpp  EsmCell.h  EsmClass.cpp  EsmClass.h  EsmClothing.cpp  EsmClothing.h  EsmContainer.cpp  EsmContainer.h  EsmCreature.cpp  EsmCreature.h  EsmDefs.h  EsmDialogue.cpp  EsmDialogue.h  EsmDoor.cpp  EsmDoor.h  EsmEnchant.cpp  EsmEnchant.h  EsmFaction.cpp  EsmFaction.h  EsmFile.cpp  EsmFile.h  EsmGameSetting.cpp  EsmGameSetting.h  EsmGlobal.cpp  (+117 more)
project/: ActivatorDlg.cpp  ActivatorDlg.h  ChildFrm.cpp  ChildFrm.h  ChildFrmFix.cpp  ChildFrmFix.h  ChildFrmScript.cpp  ChildFrmScript.h  ChildFrmVar.cpp  ChildFrmVar.h  ColorStatic.cpp  ColorStatic.h  ColorStatic1.cpp  ColorStatic1.h  CreaturePage1.cpp  CreaturePage1.h  CreaturePage2.cpp  CreaturePage2.h  CustRichEdit.cpp  CustRichEdit.h  EditViewObj.cpp  EditViewSort.cpp  ErrorDialog.cpp  ErrorDialog.h  EsmAiActivateDlg.cpp  EsmAiActivateDlg.h  EsmAiEscortDlg.cpp  EsmAiEscortDlg.h  EsmAiTravelDlg.cpp  EsmAiTravelDlg.h  EsmAiWanderDlg.cpp  EsmAiWanderDlg.h  EsmAlchemyDlg.cpp  EsmAlchemyDlg.h  EsmApparatusDlg.cpp  EsmApparatusDlg.h  EsmArmorDlg.cpp  EsmArmorDlg.h  EsmBirthSignDlg.cpp  EsmBirthSignDlg.h  (+191 more)
project/res/: MWEdit.rc2
